tests/integration/snapshots/integration__flir__fix_options-2.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"--fix\").arg(\"--unsafe-fixes\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
--fix --unsafe-fixes
