tests/integration/snapshots/integration__flir__parsing_error.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Failed to get checks for file: test.R

----- args -----
